[workspace]
members = [
     "frontend/exporter",
     "frontend/exporter/options",
     "frontend/diagnostics",
     "frontend/lint",
     "cli/options",
     "cli/options/engine",
     "cli/subcommands",
     "cli/driver",
     "test-harness",
     "engine/utils/phase-debug-webapp",
     "hax-lib-macros",
     "hax-lib-macros/types",
]
exclude = ["tests"]
resolver = "2"

[workspace.package]
version = "0.1.0-pre.1"
authors = ["hax Authors"]
license = "Apache-2.0"
homepage = "https://github.com/hacspec/hax"
edition = "2021"
repository = "https://github.com/hacspec/hax"
readme = "README.md"

[workspace.dependencies]
itertools = "0.11.0"
schemars = "0.8"
which = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
syn = { version = "1.0.107", features = [
     "derive",
     "printing",
     "extra-traits",
     "parsing",
     "full",
] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
tracing-tree = "^0.2"
quote = "1.0.32"
proc-macro2 = "1.0.66"
cargo_metadata = "0.15"
colored = "2"

# Crates in this repository
hax-frontend-exporter = { path = "frontend/exporter" }
hax-adt-into = { path = "frontend/exporter/adt-into" }
hax-cli-options = { path = "cli/options" }
hax-cli-options-engine = { path = "cli/options/engine" }
hax-frontend-exporter-options = { path = "frontend/exporter/options" }
hax-diagnostics = { path = "frontend/diagnostics" }
hax-lint = { path = "frontend/lint" }
hax-phase-debug-webapp = { path = "engine/utils/phase-debug-webapp" }
hax-lib-macros-types = { path = "hax-lib-macros/types" }
