[workspace]
members = [
     "frontend/exporter",
     "frontend/exporter/options",
     "cli/subcommands",
     "cli/driver",
     "test-harness",
     "hax-lib",
     "hax-lib/macros",
     "hax-lib/macros/types",
     "hax-lib-protocol",
     "hax-lib-protocol-macros",
     "hax-bounded-integers",
     "engine/names",
     "engine/names/extract",
     "hax-types",
]
exclude = ["tests"]
default-members = [
     "frontend/exporter",
     "frontend/exporter/options",
     "cli/subcommands",
     "cli/driver",
     "test-harness",
     "hax-lib",
     "hax-lib/macros",
     "hax-lib/macros/types",
     "hax-lib-protocol",
     "hax-lib-protocol-macros",
     "engine/names",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.1"
authors = ["hax Authors"]
license = "Apache-2.0"
homepage = "https://github.com/hacspec/hax"
edition = "2021"
repository = "https://github.com/hacspec/hax"
readme = "README.md"

[workspace.dependencies]
itertools = "0.11.0"
schemars = "0.8"
which = "4.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
syn = { version = "1.0.107", features = [
     "derive",
     "printing",
     "extra-traits",
     "parsing",
     "full",
] }
tracing = { version = "0.1", features = [
     "max_level_trace",
     "release_max_level_trace",
] }
tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "std",
     "fmt",
] }
tracing-tree = "^0.2"
quote = "1.0.32"
proc-macro2 = "1.0.66"
cargo_metadata = "0.15"
colored = "2"
annotate-snippets = "0.11"

# Crates in this repository
hax-frontend-exporter = { path = "frontend/exporter", version = "=0.1.0-rc.1", default-features = false }
hax-adt-into = { path = "frontend/exporter/adt-into", version = "=0.1.0-rc.1" }
hax-frontend-exporter-options = { path = "frontend/exporter/options", version = "=0.1.0-rc.1" }
hax-lib-macros = { path = "hax-lib/macros", version = "=0.1.0-rc.1" }
hax-lib-macros-types = { path = "hax-lib/macros/types", version = "=0.1.0-rc.1" }
hax-lib = { path = "hax-lib", version = "=0.1.0-rc.1" }
hax-engine-names = { path = "engine/names", version = "=0.1.0-rc.1" }
hax-types = { path = "hax-types", version = "=0.1.0-rc.1" }
