[package]
name = "driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
path = "src/cargo_circus.rs"
name = "cargo-circus"

[[bin]]
path = "src/driver_circus_frontend.rs"
name = "driver-circus-frontend-exporter"

[[bin]]
path = "src/json_schema.rs"
name = "cargo-circus-export-json-schemas"

[dependencies]
escape_string= "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
itertools = "0.10.5"
clap = { version = "4.0", features = ["derive"] }
paste = "1.0.11"
circus-frontend-exporter = {path = "../frontend/exporter"}
circus-diagnostics = {path = "../frontend/diagnostics"}
path-clean = "1.0.1"
tempfile = "3.4"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

