(lang dune 3.0)

(name hax-engine)

(version 0.1.0)

(generate_opam_files true)

(source
 (github hacspec/hax))

(authors "Hax Authors")

(maintainers "Hax Authors")

(license "Apache-2.0")

(documentation https://hacspec.org/hax/)

(package
 (name hax-engine)
 (synopsis "The engine of hax, a Rust verification tool")
 (description "Hax is divided in two: a frontend (written in Rust) and an engine (written in OCaml). This is the engine.")
 (depends
        (ocaml (>= "4.14.1"))
        dune
        (base                (= "0.16"))
        (core                (= "0.16"))
        (yojson              (= "2.2"))
        (non_empty_list      (= "0.1"))
        (pprint              (= "0.1"))
        (ppx_deriving_yojson (= "3.7"))
        (ppx_yojson_conv     (= "0.15"))
        (ppx_sexp_conv       (= "0.16"))
        (ppx_compare         (= "0.16"))
        (ppx_hash            (= "0.16"))
        (ppx_deriving        (= "5.2"))
        (cmdliner            (= "1.3"))
        (angstrom            (= "0.16"))
        (re                  (= "1.11"))
        (ppx_matches         (= "0.1"))
        (ppx_string          (= "0.16"))
        (logs                (= "0.7"))
        (ocamlgraph          (= "2.1"))

        js_of_ocaml-compiler
        js_of_ocaml
        js_of_ocaml-ppx
        
        ; F*-specific dependencies
        batteries
        stdint
        ppxlib
        menhirLib
        sedlex
        )
 (tags
  (topics rust verification)))

