(lang dune 3.0)

(name hax-engine)

(version 0.2.0)

(generate_opam_files true)

(source
 (github hacspec/hax))

(authors "Hax Authors")

(maintainers "Hax Authors")

(license "Apache-2.0")

(documentation https://hacspec.org/hax/)

(package
 (name hax-engine)
 (synopsis "The engine of hax, a Rust verification tool")
 (description "Hax is divided in two: a frontend (written in Rust) and an engine (written in OCaml). This is the engine.")
 (depends
        (ocaml (>= "4.14.1"))
        dune
        (base                (= "v0.16.2"))
        (core                (= "v0.16.2"))
        (yojson              (= "2.2.0"))
        (non_empty_list      (= "0.1"))
        (pprint              (= "0.1"))
        (ppx_deriving_yojson (= "3.7.0"))
        (ppx_yojson_conv     (= "v0.15.1"))
        (ppx_sexp_conv       (= "v0.16.0"))
        (ppx_compare         (= "v0.16.0"))
        (ppx_hash            (= "v0.16.0"))
        (ppx_deriving        (= "5.2.1"))
        (cmdliner            (= "1.3.0"))
        (angstrom            (= "0.16.0"))
        (re                  (= "1.11.0"))
        (ppx_matches         (= "0.1"))
        (ppx_string          (= "v0.16.0"))
        (logs                (= "0.7.0"))
        (ocamlgraph          (= "2.1"))

        js_of_ocaml-compiler
        js_of_ocaml
        js_of_ocaml-ppx
        
        ; F*-specific dependencies
        batteries
        stdint
        ppxlib
        menhirLib
        sedlex
        )
 (tags
  (topics rust verification)))

