[package]
name = "hax-lib"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = "Hax-specific helpers for Rust programs"

[dependencies]
hax-lib-macros = { workspace = true, optional = true }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }

[features]
default = ["macros"]
macros = ["dep:hax-lib-macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
