[package]
name = "hax-secret-integers"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
secret_independence = []

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }