[package]
name = "hax-types"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
hax-frontend-exporter.workspace = true
hax-frontend-exporter-options.workspace = true
itertools.workspace = true
path-clean = "1.0.1"
schemars.workspace = true
serde.workspace = true
colored.workspace = true
serde_json.workspace = true
annotate-snippets.workspace = true
hax-adt-into.workspace = true
bincode.workspace = true
zstd = "0.13.1"

[features]
rustc = ["hax-frontend-exporter/rustc"]
