[package]
name = "hax-types"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Helper crate defining the types used to communicate between the custom rustc driver, the CLI and the engine of hax."

[dependencies]
clap = { workspace = true, features = ["env"] }
hax-frontend-exporter.workspace = true
hax-frontend-exporter-options.workspace = true
itertools.workspace = true
path-clean = "1.0.1"
schemars.workspace = true
serde.workspace = true
colored.workspace = true
serde_json.workspace = true
annotate-snippets.workspace = true
hax-adt-into.workspace = true
tracing.workspace = true
serde-brief ={ version = "*", features = ["std", "alloc"]}
zstd = "0.13.1"
miette = "7.2.0"

[features]
rustc = ["hax-frontend-exporter/rustc"]
