[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"


[[test]]
name = "full"
path = "src/harness.rs"
harness = false
test = false

[dev-dependencies]
libtest-mimic = "0.6"
cargo_metadata = "0.15"
enum-iterator = "1.4"
serde_json = "1.0"
lazy_static = "1.4"
assert_cmd = "2.0"
insta = {version = "1.29.0", features = ["filters", "toml"]}
serde = { version = "1.0", features = ["derive"] }
