[package]
name = "hax-test-harness"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[[test]]
name = "toolchain"
path = "src/harness.rs"
harness = false
test = false

[dev-dependencies]
libtest-mimic = "0.6"
cargo_metadata.workspace = true
enum-iterator = "1.4"
serde_json = "1.0"
lazy_static = "1.4"
assert_cmd = "2.0"
insta = {version = "1.29.0", features = ["filters", "toml"]}
serde = { version = "1.0", features = ["derive"] }
regex = "1"
hax-cli-options-engine.workspace = true
