[workspace]
members = [
        "assert",
        "enum-struct-variant",
        "literals",
        "slices",
        "naming",
        "if-let",
        "let-else",
        "enum-repr",
        "pattern-or",
        "pattern-array",
        "pattern-opaque",
        "side-effects",
        "mut-ref-functionalization",
        "generics",
        "loops",
        "even",
        "odd",
        "never-type",
        "attributes",
        "attribute-opaque",
        "raw-attributes",
        "traits",
        "dyn",
        "reordering",
        "nested-derefs",
        "proverif-minimal",
        "proverif-basic-structs",
        "proverif-ping-pong",
        "proverif-noise",
        "proverif-fn-to-letfun",
        "cli/include-flag",
        "cli/interface-only",
        "recursion",
        "functions",
        "guards",
]
resolver = "2"
