(lang dune 3.6)

(name thir-elab)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name thir-elab)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
        ocaml
        dune
        base
        core
        fstar
        yojson
        non_empty_list
        bignum
        pprint
        ppx_deriving_yojson
        fstar
        ppx_yojson_conv
        ppx_sexp_conv
        ppx_compare
        ppx_hash
        visitors
        ppx_deriving
        ppx_deriving
        ppx_deriving_cmdliner
        ppx_matches)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
