[package]
name = "hax-driver"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
path = "src/driver.rs"
name = "driver-hax-frontend-exporter"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
hax-frontend-exporter.workspace = true
hax-cli-options.workspace = true
hax-cli-options-engine.workspace = true
hax-frontend-exporter-options.workspace = true
hax-lint.workspace = true
hax-diagnostics.workspace = true
itertools.workspace = true
which.workspace = true
inquire = "0.6"
const_format = "0.2"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
hax-phase-debug-webapp.workspace = true
