[package]
name = "hax-cli-options"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
clap.workspace = true
hax-frontend-exporter-options.workspace = true
path-clean = "1.0.1"

[build-dependencies]
sha2 = "0.10.7"

