[package]
name = "hax-cli-options"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
build = "build.rs"
description = "hax cli options"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
clap.workspace = true
hax-frontend-exporter-options.workspace = true
path-clean = "1.0.1"
