[package]
name = "hax-subcommands"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
path = "src/cargo_hax.rs"
name = "cargo-hax"

[[bin]]
path = "src/json_schema.rs"
name = "hax-export-json-schemas"

[[bin]]
path = "src/pretty_print_diagnostics.rs"
name = "hax-pretty-print-diagnostics"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
itertools.workspace = true
clap.workspace = true
which.workspace = true
colored.workspace = true
hax-cli-options.workspace = true
hax-frontend-exporter-options.workspace = true
hax-diagnostics.workspace = true
paste = "1.0.11"
path-clean = "1.0.1"
tempfile = "3.4"
version_check = "0.9"
rustup-toolchain = "0.1"
is-terminal = "0.4.9"
const_format = "0.2"
inquire = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0.1"
extension-traits = "1.0.1"

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
hax-frontend-exporter.workspace = true
hax-diagnostics.workspace = true
hax-cli-options.workspace = true
hax-cli-options-engine.workspace = true
version_check = "0.9"
toml = "0.7"
