[package]
name = "cargo-hax"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
build = "build.rs"
description = "The high assurance translation toolchain"

[[bin]]
path = "src/cargo_hax.rs"
name = "cargo-hax"

[[bin]]
path = "src/json_schema.rs"
name = "hax-export-json-schemas"

[[bin]]
path = "src/pretty_print_diagnostics.rs"
name = "hax-pretty-print-diagnostics"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
itertools.workspace = true
clap.workspace = true
paste = "1.0.11"
hax-frontend-exporter.workspace = true
hax-frontend-exporter-options.workspace = true
hax-types.workspace = true
path-clean = "1.0.1"
tempfile = "3.8"
which.workspace = true
version_check = "0.9"
rustup-toolchain = "0.1"
colored.workspace = true
is-terminal = "0.4.9"
hax-phase-debug-webapp.workspace = true
inquire = "0.6"
const_format = "0.2"
ciborium.workspace = true
annotate-snippets.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
hax-types.workspace = true
schemars.workspace = true
hax-frontend-exporter.workspace = true
hax-lib-macros-types = {workspace = true, features = ["schemars"]}
version_check = "0.9"
toml = "0.8"
